# settlement-trends

./: .gitignore  GIS Dateien - KARTE CS.5..aprx  Verteilung der Fundstellentypen.xlsx  main.py  pyproject.toml
data/cleaned/: appendix_a_sites_gazetteer.cleaned.txt  appendix_c_pottery_classification.cleaned.txt  list_of_figures.cleaned.txt  list_of_maps.cleaned.txt  list_of_plates.cleaned.txt
data/coords/: Sites_Punkte_WGS84_Koordinaten Umgerechnet-Volle Tabelle.xlsx  Sites_Punkte_WGS84_Koordinaten Umgerechnet.xlsx  coords.csv
data/db/: edition.sqlite
data/interim/: classification.jsonl  figures.jsonl  finds.jsonl  maps.jsonl  plates.jsonl  site_figure.jsonl  site_map.jsonl  site_plate.jsonl  sites.jsonl  typology.jsonl
data/raw/: appendix_a_sites_gazetteer.txt  appendix_c_pottery_classification.txt  list_of_figures.txt  list_of_maps.txt  list_of_plates.txt
notebooks/: exploration.html  exploration.ipynb  explore_map.py  map_exploration.html  map_exploration.ipynb  period_exploration.html  period_exploration.ipynb  period_mapping.csv
src/: schema.sql
src/classification/: export_classification.py
src/edition/: clean.py  cli.py  db.py  load_db.py  parse_gazetteer.py  parse_refs.py
src/finds/: export_finds.py
src/preprocessing/: clean_raw_data.py
src/settlement_typology/: export_typology.py
visualisations/: readme.txt
