[project]
name = "settlement-trends"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "html5lib>=1.1",
    "lxml>=6.0.2",
    "opencv-python>=4.12.0.88",
    "paddleocr>=3.3.2",
    "paddlepaddle>=3.2.2",
    "paddlex[ocr]==3.3.12",
    "pandas>=2.3.3",
    "pdf2image>=1.17.0",
    "pyproj>=3.7.2",
    "tqdm>=4.67.1",
]

[project.scripts]
edition = "edition.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
